using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;



internal class AnimationStrings
{

    internal static string isgrounded = "IsGrounded";
    internal static string attack = "attack";
    internal static string jump = "Jump";
    internal static string canMove = "canMove";
    internal static string SpecialAttackTrigger = "SpeacialAttack";
    internal static string isAlive = "IsAlive";
    internal static string yVelocity = "yVelocity";
    internal static string isBlock = "Block";
    internal static string isHit = "isHit";
    internal static string hit = "Hit";
    internal static string LockVelocity = "Lockvelocity";
}